force-app/main/default/objects/Process_Task_Owner_Assignment_Matrix__c/Process_Task_Owner_Assignment_Matrix__c.object-meta.xml
<CustomObject>
    <label>Process Task Owner Assignment Matrix</label>
    <nameField>
        <label>Task Owner Assignment Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Task Owner Assignment Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>