force-app/main/default/objects/Process_Task_Owner_Assignment_Matrix__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Task_Owner_Assignment_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>