force-app/main/default/objects/Process_Task_Owner_Assignment_Matrix__c/fields/Branch_Functional_Unit__c.field-meta.xml
<CustomField>
    <fullName>Branch_Functional_Unit__c</fullName>
    <label>Branch Functional Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Functional_Unit_Branch</valueSetName>
    </valueSet>
</CustomField>