force-app/main/default/objects/Process_Task_Owner_Assignment_Matrix__c/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <label>Queue Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Queue_List</valueSetName>
    </valueSet>
</CustomField>