force-app/main/default/objects/Process_Task_Owner_Assignment_Matrix__c/fields/User_Functional_Unit__c.field-meta.xml
<CustomField>
    <fullName>User_Functional_Unit__c</fullName>
    <label>Owner Functional Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Functional_Unit_Owner</valueSetName>
    </valueSet>
</CustomField>