force-app/main/default/objects/Process_Task_Owner_Assignment_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Branch_Functional_Unit__c</columns>
    <columns>User_Functional_Unit__c</columns>
    <columns>Queue_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>